--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "semantic_annotation_pipeline-annotation_module"]
 	path = semantic_annotation_pipeline-annotation_module
 	url = https://github.com/ReneDorsch/semantic_annotation_pipeline-annotation_module.git
+[submodule "semantic_annotation_pipeline-ui"]
+	path = semantic_annotation_pipeline-ui
+	url = git@github.com:ReneDorsch/semantic_annotation_pipeline-ui.git
